p2/confs/simple-depl.yml
# --- 1. THE DEPLOYMENT (Runs the container) ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-deployment
  labels:
    app: hello-kubernetes
spec:
  replicas: 1 # We just want 1 pod running
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
        - name: hello-kubernetes
          image: paulbouwer/hello-kubernetes:1.10 # Your Docker image
          ports:
            - containerPort: 8080 # The port the app listens to inside the container

---
# --- 2. THE SERVICE (Exposes the container to the server) ---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-service
spec:
  type: NodePort # Opens a port on your server's public IP
  selector:
    app: hello-kubernetes
  ports:
    - protocol: TCP
      port: 80 # Service internal port
      targetPort: 8080 # Port on the container to send traffic to
      nodePort: 30080 # Port opened on your server (Must be between 30000-32767)
