p2/confs/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
spec:
  rules:
    - host: app1.com # <-- 1. Matches incoming HTTP Host Header
      http:
        paths:
          - path: / # <-- 2. Matches path prefix (e.g http://app1.com/)
            pathType: Prefix
            backend:
              service:
                name: app-one # <-- 3. Hands traffic off to Service app-one
                port:
                  number: 80 # <-- 4. Directs to service's exposed port 80
